5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_2426.log
== TEST (2019-04-28 13:29:57) 
-- CODE:
tempo = float(input(""))
velocidade = float(input(""))
kml = 12
distancia = tempo*velocidade
lirosgasosa = distancia/kml
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    objeto = int(input(""))
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:31:50) 
-- CODE:
tempo = float(input(""))
velocidade = float(input(""))
kml = 12
distancia = tempo*velocidade
lirosgasosa = distancia/kml
print(distancia)
print(litrosgasosa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(litrosgasosa)
NameError: name 'litrosgasosa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:32:30) 
-- CODE:
tempo = float(input(""))
velocidade = float(input(""))
kml = 12
distancia = tempo*velocidade
lirosgasosa = distancia/kml
print(distancia)
print(lirosgasosa)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:33:05) 
-- CODE:
tempo = float(input(""))
velocidade = float(input(""))
kml = 12
distancia = tempo*velocidade
lirosgasosa = distancia/kml
print(distancia)
print(lirosgasosa)
-- EXECUTION TIME:
0.146636
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
